fix elastic Search to community
