# cmd/app/main.go
@@ -117,13 +117,14 @@ func NewApiRouter(logger *zap.Logger, dbConn *sql.DB, redisPool *redis.Pool, ela
 	postStore := db.NewDBPostStore(dbConn)
 	applicationStore := db.NewDBApplicationStore(dbConn)
 	elasticProfileStore := dbElasic.NewElasticProfileStore(elasticConn, "profile")
+	elasticCommunityStore := dbElasic.NewElasticCommunityStore(elasticConn, "community_index")
 	communityStore := db.NewDBCommunityStore(dbConn)
 	wsHub := service.NewHub()
 	friendStore := db.NewDBFriendStore(dbConn)
 	authService := service.NewAuthService(userStore, sessionStore, elasticProfileStore)
 	profileService := service.NewProfileService(profileStore, userStore, friendStore, elasticProfileStore)
 	chatService := service.NewChatService(userStore, profileStore, chatStore, messageStore, wsHub)
-	communityService := service.NewCommunityService(communityStore, postStore, userStore)
+	communityService := service.NewCommunityService(communityStore, postStore, userStore, elasticCommunityStore)
 	applicationService := service.NewApplicationService(userStore, applicationStore, wsHub)
 	application := handler.NewApplicationHandler(applicationService)
 	auth := handler.NewAuthHandler(authService, config)
@@ -206,6 +207,7 @@ func NewApiRouter(logger *zap.Logger, dbConn *sql.DB, redisPool *redis.Pool, ela
 
 	communityRouter := apiRouter.PathPrefix("/communities").Subrouter()
 	communityRouter.Use(auth.AuthMiddleware)
+	communityRouter.HandleFunc("/search", community.SearchCommunityByName).Methods("GET")
 	communityRouter.HandleFunc("", community.CreateCommunity).Methods("POST", "OPTIONS")
 	communityRouter.HandleFunc("/my", community.GetUserCommunities).Methods("GET")
 	communityRouter.HandleFunc("/other", community.GetOtherCommunities).Methods("GET")
