# docs/swagger.yaml
@@ -1149,6 +1149,54 @@ paths:
       summary: Получить другие сообщества
       tags:
       - communities
+  /communities/search:
+    get:
+      description: Возвращает список сообществ, имя которых соответствует поисковому
+        запросу.
+      parameters:
+      - description: Полное или частичное имя сообщества
+        in: query
+        name: name
+        required: true
+        type: string
+      - default: recommended
+        description: 'Тип подписки: subscriber, notSubscriber'
+        enum:
+        - subscriber
+        - recommended
+        in: query
+        name: type
+        type: string
+      - default: 20
+        description: Лимит количества сообществ
+        in: query
+        name: limit
+        type: integer
+      - default: 1
+        description: Номер страницы для пагинации
+        in: query
+        name: page
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Найденные сообщества
+          schema:
+            items:
+              $ref: '#/definitions/domain.ShortCommunity'
+            type: array
+        "400":
+          description: Missing name query parameter
+          schema:
+            type: string
+        "500":
+          description: Server error
+          schema:
+            type: string
+      summary: Поиск сообществ по имени
+      tags:
+      - community
   /communities/users/{id}:
     get:
       description: Возвращает список сообществ, на которые подписан указанный пользователь
